updated a few icons, both language pages are now responsive, footprint trail now also on mobile, fixed the contact button graphical issue, put the intro title in english in both languages

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -199,6 +199,7 @@ body, html {
 
 .introduction {
   background: $nivel-blue;
+  min-height: 740px;
   &__illustration {
     width: 100%;
     display: flex;
@@ -448,6 +449,8 @@ body, html {
     &:before {
       background: url("../img/icons/service-icon__ddos.svg");
       width: 170px;
+      height: 239px;
+      top: -296px;
     }
   }
   &__service-8 {
@@ -517,7 +520,7 @@ body, html {
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 0 0 39px 39px;
+    border-width: 0 0 40px 39px;
     position: absolute;
     left: -39px;
     top: 0;
@@ -630,14 +633,3 @@ input[type=submit] {
 /*
  * Languages
  */
-
-// Spanish
-.spanish {
-  .introduction {
-    &__title {
-      &__text {
-        font-size: 280px;
-      }
-    }
-  }
-}
